# petroly-django

./: .gitignore  .gitmodules  Dockerfile  Pipfile  Procfile  README.md  SECURITY.md  banner.json  data.py  db.sqlite3  extract_env_vars.sh  fly.toml  instructor.csv  manage.py  own_perm.py  populate.py  populate_communities.py  pyproject.toml  requirements.txt  res1.html  res2.html  res2.txt  runtime.txt  send_mass_emails.py  user_log.json  web_scrap.py  whatsapp_populate.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  django.yml  main_petroly.yml  stellate.yml
account/: admin.py  forms.py  middleware.py  models.py  permissions.py  schema.py  test_utils.py  tests.py  types.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py  0002_auto_20210226_0538.py  0002_auto_20210408_0824.py  0002_profile_year.py  0002_remove_profile_profile_pic.py  0003_alter_profile_profile_pic.py  0003_auto_20210202_0529.py  0003_auto_20210226_0636.py  0003_profile_profile_pic.py  0004_alter_profile_major.py  0004_auto_20210204_1927.py  0004_auto_20210227_0509.py  0005_auto_20210324_1846.py  0005_auto_20210614_0614.py  0005_profile_major.py  0006_auto_20210222_2224.py  0006_auto_20210331_1808.py  0006_profile_language.py  0007_alter_profile_language.py  0007_auto_20210402_0601.py  0008_alter_profile_language.py  0009_alter_profile_language.py  0010_auto_20220113_1744.py  0011_auto_20220116_1133.py  0012_alter_profile_major.py  0012_alter_profile_profile_pic.py  0013_userlog.py  0014_profile_premium.py
account/templates/: index.html
communities/: admin.py  apps.py  models.py  populate.py  schema.py  types.py
communities/migrations/: 0001_initial.py  0002_community_archived.py  0003_community_date.py  0004_auto_20220108_0916.py  0005_alter_community_likes.py  0006_alter_community_section.py  0007_alter_community_owner.py  0008_auto_20220110_1938.py  0018_report.py  (+17 more)
data/: AE.csv  AF.csv  ARC.csv  ARE.csv  CE.csv  CEM.csv  CHE.csv  CHEM.csv  COE.csv  CRP.csv  EE.csv  ELD.csv  GS.csv  IAS.csv  ICS.csv  ISOM.csv  LS.csv  MATH.csv  ME.csv  MGT.csv  PE.csv  PHYS.csv  SE.csv  data.csv  fin.py  general.py  groups.txt  math.py  telegram_links.txt
django_email_verification/: confirm.py  token.py  views.py
evaluation/: admin.py  data.py  filters.py  forms.py  models.py  schema.py  tests.py  types.py  urls.py  utils.py  views.py
forum/: admin.py  models.py  permissions.py  schema.py
home/: urls.py  views.py
ingredients/: models.py  schema.py  urls.py
kfupm/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
middleware/: schema.py
notifier/: admin.py  apps.py  models.py  schema.py  types.py  urls.py  utils.py
petroly/: asgi.py  log.py  schema.py  settings.py  urls.py  wsgi.py
roommate/: admin.py  apps.py  models.py  schema.py  tests.py  urls.py  utils.py  views.py
settings/: base.py  dev.py  prod.py
staticfiles/: staticfiles.json
strawberry-ratelimit/: ratelimit.py
strawberry_django_plus/: permissions.py
strawberry_ratelimit/: ratelimit.py
telegram_bot/: __init__.py  admin.py  bot_controller.py  forms.py  messages.py  models.py  schema.py  urls.py  utils.py  views.py
templates/: 503.html  activation_email.html  base.html  base_old.html  design.html  email_body.html  email_confirm.html  email_confirmation.html  email_done.html  email_static_body.html  index.html  message_email.html  password_reset_email.html  robots.txt
whatsapp/: admin.py  apps.py  models.py  schema.py
whatsguard/: admin.py  apps.py  models.py  schema.py  types.py  utils.py
(+195 files in other folders)
