[tool.poetry]
name = "petroly-django"
version = "1.0.0"
description = "Petroly Initiative backend and API"
authors = ["ammar-faifi <a@ammarf.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.12.5"
Django = "^4.2.14"
django-q = "^1.3.9"
django-choices-field = "^2.3"
django-cors-headers = "^4.4.0"
gunicorn = "^22.0.0"
Pillow = "^10.4.0"
psycopg2 = "^2.9.9"
strawberry-django-auth = "^0.376.2"
strawberry-graphql-django = "^0.46.1"
whitenoise = "^6.7.0"
cloudinary = "^1.41.0"
python-telegram-bot = {extras = ["callback-data"], version = "^21.4"}
django-multiselectfield = "^0.1.13"
cryptography = "^43.0.0"
requests = "^2.32.3"
django-email-verification = "^0.3.3"
django-filter = "^24.3"
dj-database-url = "^2.2.0"
django-debug-toolbar = "^4.4.6"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
anthropic = "^0.31.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.7"
pylint-django = "^2.5.3"
flake8 = "^7.1.1"
django-stubs = "^4.2.3"
python-dotenv = "^1.0.1"
setuptools = "^74.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
